# adventofcode

./: Cargo.toml  readme.md
.github/workflows/: rust.yml
aoc2021/: Cargo.toml
aoc2021/benches/: all_days.rs
aoc2021/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day06_bigint.rs  day07.rs  day07_fast.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs  utils.rs
aoc2021/src/utils/: advent_error.rs  binary.rs  files.rs  graph.rs  letters.rs  mod.rs  shortest_path.rs  string.rs  test.rs  two_dimensional.rs  union_find.rs
aoc2022/: Cargo.toml
aoc2022/benches/: all_days.rs
aoc2022/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  lib.rs  main.rs
aoc2022/src/utils/: coordinate.rs
aoc2023/: Cargo.toml
aoc2023/benches/: all_days.rs
aoc2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  lib.rs  main.rs
aoc2023/src/utils/: erathostenes.rs  factorize.rs  mod.rs
