[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itermore = "0.1.0"
itertools = "0.10.1"
priority-queue = "1.2.1"

thiserror = "1.0.30"
colored = "2.0.0"

scan_fmt = "0.2.6"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "all_days"
harness = false
