[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itermore = "0.1"
itertools = "0.10"
priority-queue = "1.3"
cached = "0.40"
rustc-hash = "1.1"

rayon = "1.6"

thiserror = "1.0"
colored = "2.0"

scan_fmt = "0.2"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "all_days"
harness = false
